# scorep_metadata2json

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
docs/: basemodel.rst  conf.py  index.rst  parser.rst
scorepmetadata2json/: __init__.py  __main__.py  basemodel.py  parser.py
test/: test_arg_parser.py  test_parser.py
test/test_data/: parsed_data.json  scorep.fair  scorep.fair.json
