[tool.poetry]
name = "scorepmetadata2json"
version = "0.1.0"
description = ""
authors = ["Maximilian Sander <maximilian.sander1@tu-dresden.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.0"

##[tool.po  emtry.scripts]
#scorep-metadata2json = "scorepmetadata2json.__main__:main"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
autodoc-pydantic = "^2.0.1"
erdantic = "^0.6.0"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.15"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
